--- a/event-listener-practice/index.html
+++ b/event-listener-practice/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Event Listener Practice</title>
+     <link rel="stylesheet" href="styles.css"/>
+  </head>
 
-<head>
-    <title></title>
-</head>
+  <body>
+    
+    <h1 id= "hdr"> DJ Website</h1>
+    <div id="box"></div>
 
-    <body>
+   
+  </body>
 
-    </body>
-
+  <script type="text/javascript" src="app.js"></script>
 </html>
