--- a/dom-olympics-start/index.html
+++ b/dom-olympics-start/index.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>DOM Olympics</title>
-</head>
-<body>
+  </head>
+  <body>
     <header id="header"></header>
     <label>Theme</label>
+<label>Theme</label>
     <select id="theme-drop-down">
-        <option value="theme-one">blue/brown</option>
-        <option value="theme-two">red/black</option>
+        <option value="1">blue/brown</option>
+        <option value="2">red/black</option>
+        <option value="3">orange/blue</option>
+        <option value="4">brown/orange</option>
     </select>
     <div id="main">
-        <button id='clear-button'>clear</button>
-        <div class="messages">
-            <div class="message left">
-                I have something serious to talk about
-            </div>
-            <div class="message right">
-                I don't want to talk
-            </div>
-            <div class="message left">
-                You have to, you're the police
-            </div>
-            <div class="message right">
-                I'm just a simple farmer
-            </div>
+      <button id="clear-button">clear</button>
+      <div class="messages">
+        <div id=".left" class="message left">
+          I have something serious to talk about
         </div>
+        <div id=".right" class="message right">I don't want to talk</div>
+        <div id=".left" class="message left">
+          You have to, you're the police
+        </div>
+        <div id=".right" class="message right">I'm just a simple farmer</div>
+      </div>
         <form name="message">
-            <input id="input" value="Thanks! Goodbye"/>
-            <button>Send</button>
+            <input id="input" placeholder="Enter New Text Here!" />
+            <button id="newMsg">Send</button>
         </form>
     </div>
-   
+
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
