--- a/moms-shopping-list-start/index.html
+++ b/moms-shopping-list-start/index.html
@@ -15,7 +15,7 @@
         <div class="title-bar">
             <h3 class="title">Add Item</h3>
         </div>
-        <form name="addItem" id="add-todo">
+        <form type="text" name="addItem" id="addTodo">
             <label class="label" for="title">Item name</label>
             <input class="input" name="title" id="title" />
             <button>submit</button>
