--- a/css-flags/index.html
+++ b/css-flags/index.html
@@ -1,91 +1,62 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS FLAGS</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<html>
-    <head>
-
-        <title>CSS Flags</title>
-        <link rel="stylesheet" href="styles.css"/>
-
-    </head>
-    
-    <body>
-
-        <france id='france'>
-
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-
-        </france>
-
-        <germany id='grm' class='flg'>
-
-            <div></div>
-            <div></div>
-            <div></div>
-
-        </germany>
-
-        <madagascar id='mdg' class='flg'>
-
-            <div></div>
-            <div></div>
-            <div></div>
-
-        </madagascar>
-        
-        <switzerland id='swtlnd' class='flg'>
-
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-
-        </switzerland>
-
-        <sweeden id='swdn' class='flg'>
-
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-
-        </sweeden>
-
-        <gambia id='gmb' class='flg'>
-
-            <div></div>
-            <div></div>
-            <div></div>
-
-        </gambia>
-
-        <japan id='jpn' class='flg'>
-
-            <div></div>
-            <div></div>
-
-        </japan>
-
-        <niger id='ngr' class='flg'>
-
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-
-        </niger>
-
-    </body>
-
-
-
-
-
-
+  <body>
+    <div class="main-container">
+      <div class="container-france">
+        <div class="france-color-one"></div>
+        <div class="france-color-two"></div>
+        <div class="france-color-three"></div>
+      </div>
+      <div class="container-germany">
+        <div class="germany-color-one"></div>
+        <div class="germany-color-two"></div>
+        <div class="germany-color-three"></div>
+      </div>
+      <div class="container-madagascar">
+        <div class="madagascar-color-one"></div>
+        <div class="right-madagascar">
+          <div class="madagascar-color-two"></div>
+          <div class="madagascar-color-three"></div>
+        </div>
+      </div>
+      <div class="container-switzerland">
+        <div class="switzerland-color-one">
+          <div class="cross">
+            <div class="switzerland-color-two"></div>
+            <div class="switzerland-color-three"></div>
+          </div>
+        </div>
+      </div>
+      <div class="container-sweden">
+        <div class="sweden-color-one">
+          <div class="cross">
+            <div class="sweden-color-two"></div>
+            <div class="sweden-color-three"></div>
+          </div>
+        </div>
+      </div>
+      <div class="container-gambia">
+        <div class="gambia-color-one"></div>
+        <div class="gambia-color-two"></div>
+        <div class="gambia-color-three"></div>
+      </div>
+      <div class="container-japan">
+        <div class="japan-color-one"></div>
+        <div class="japan-color-two"></div>
+      </div>
+      <div class="container-niger">
+        <div class="niger-color-one"></div>
+        <div class="niger-color-two"></div>
+        <div class="niger-color-three"></div>
+      </div>
+    </div>
+  </body>
 </html>
