--- a/Level 2/simple-calculator/index.html
+++ b/Level 2/simple-calculator/index.html
@@ -30,7 +30,7 @@
         <div id="results">
             <h1 class="resultsHeading">🔽Results🔽</h1>
             <ul>
-                <li id="add" class="addCol"></li>
+                <li id="addd" class="addCol"></li>
                 <li id="subtract" class="subCol"></li>
                 <li id='multiply' class="multiCol"></li>
             </ul>
