Initial Commit: travel-form
-Initial commit and code for travel-form

--- a/Level 2/simple-calculator/index.html
+++ b/Level 2/simple-calculator/index.html
@@ -28,7 +28,7 @@
             <button id='multiResult' class="multi">Multiplication</button>
         </div>
         <div id="results">
-            <h1 class="resultsHeading">🔽Results🔽</h1>
+            <h1 class="resultsHeading">Results</h1>
             <ul>
                 <li id="addd" class="addCol"></li>
                 <li id="subtract" class="subCol"></li>
