Update: Mario Pest Control Completion
-Added code to CSS and HTML to make site dynamic

--- a/Level 2/mario-pest-control/index.html
+++ b/Level 2/mario-pest-control/index.html
@@ -5,8 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mario Pest Control</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="header">
+        <img id="titleImage"
+            src="https://le-cdn.hibuwebsites.com/f187e4fb3c094b53abccdb9f00e02502/dms3rep/multi/opt/Marios_Pest_Control_Logo-fe15c395-640w.png"
+            alt="">
+    </div>
+
+
+    <div class="row">
+        <div class="column">
+            <div class="card">
+
+                <h3>Flat Rate Pest Control</h3>
+                <img id="mbros" class="listItem"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiXMcm8B9hJUDmK3GxnRBP3dueobJkxV1p_SRzdju-6Yov7hrin1ArIV2XoxMzfxI7KoE&usqp=CAU">
+                <div id="totals">
+                    <label id="totalPrice">Price Quote: </label><br>
+                    <input type="" id="total" name="total"><br>
+                    <input type="submit" id="submit" value="Get Quote"><br>
+
+
+                    <!-- <ul>
+                        <li id="typeB" value='7'></li>
+                        <li id="typeC" value='11'></li>
+                        <li id="typeG" value='5'></li>
+                    </ul> -->
+                </div>
+                <button id="clear" type="reset"><a href="javascript:location.reload(true)">Refresh this
+                        page</a></button>
+            </div>
+
+        </div>
+        <div class="column">
+            <div class="card">
+                <h3>BobOmbs</h3>
+                <form name="bobOmbs" id="click">
+                    <img class="listItem"
+                        src="https://mario.wiki.gallery/images/thumb/9/9e/Bobomb_-_MarioPartyStarRush.png/1200px-Bobomb_-_MarioPartyStarRush.png">
+                    <p class="gCount" id="G-count">Price:<br>7<img
+                            src="https://c.tenor.com/niCYkSegysUAAAAi/coin-mario.gif" id="coin"></p>
+                    <input name='bTotal' type="number" placeholder="Enter Amount Here" id="BB-total">
+
+                </form>
+
+            </div>
+        </div>
+        <!-- https://mario.wiki.gallery/images/thumb/a/ae/NSMBU_Spiny_Cheep_Artwork.png/1200px-NSMBU_Spiny_Cheep_Artwork.png -->
+        <div class="column">
+            <div class="card">
+                <h3>Cheap-Cheep</h3>
+                <form name="cheapCheep" id="click2">
+                    <img class="listItem"
+                        src="https://mario.wiki.gallery/images/thumb/a/ae/NSMBU_Spiny_Cheep_Artwork.png/1200px-NSMBU_Spiny_Cheep_Artwork.png">
+                    <p class="gCount" id="G-count">Price:<br>11<img
+                            src="https://c.tenor.com/niCYkSegysUAAAAi/coin-mario.gif" id="coin"></p>
+                    <input name="cTotal" type="number" placeholder="Enter Amount Here" id="CC-total"></input>
+                </form>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Goombas</h3>
+                <form name="goomba" id="click3">
+                    <img class="listItem" src="https://ssb.wiki.gallery/images/e/e0/BigGoomSmallGooms.png">
+                    <p class="gCount" id="G-count">Price:<br>5<img
+                            src="https://c.tenor.com/niCYkSegysUAAAAi/coin-mario.gif" id="coin"></p>
+                    <input name="gTotal" placeholder="Enter Amount Here" id="G-total"></input>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Website: <a href="OnMyLocalHost.com">OnMyLocalHost.com</a> </p>
+        <p>Email: <a href="mailto: marioPest@abc.com">marioPest@abc.com</a></p>
+        <p>Call: (555)-555-PEST</p>
+        <p>Address: 2240 N.Road, NY, New York</p>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
